rnsc/test_data/rns_integration/error/parser/instructions/byte_operand_missing.rns
.class ByteOperandMissing
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    bipush
    return
  .code_end
.method_end
.class_end
